feat: TableGroupRepository 구현